[LIST] Fixed flickering of resutls when searching

--- a/frontend/src/app/browse/page.module.scss
+++ b/frontend/src/app/browse/page.module.scss
@@ -14,6 +14,7 @@
   .filters {
     display: flex;
     gap: 1rem;
+    height: 5rem;
 
     .search {
       display: block;
